--- a/css/style.css
+++ b/css/style.css
@@ -137,10 +137,9 @@ main a:hover {
   justify-content: center;
 }
 
-
-
 .project img {
   max-width: 100px;
+  max-height: 60px;
 }
 
 .project-one {
@@ -160,7 +159,6 @@ main a:hover {
   background: #DBCC00;
 }
 
-
 footer {
   padding: 20px 0;
 }
@@ -173,4 +171,10 @@ footer li {
 main li {
   color: black;
   display: inline-block;
+}
+
+@media (max-width: 549px) {
+  #about {
+    text-align: center;
+  }
 }
