--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,6 @@ main li {
 @media (max-width: 549px) {
   #about {
     text-align: center;
-    padding: 0px 20px;
+    padding: 0px 25px 0px 0px;
   }
 }
