--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,8 @@ main a{
 
 main a:hover {
   text-decoration: underline;
-  color: black;
+  color: yellow;
+  style: bold;
 }
 
 #projects .six.columns {
@@ -106,11 +107,11 @@ main a:hover {
 
 #about {
   background: #F9F9F9;
-  min-height: 80vh;
+  min-height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
+  padding: 20px 0px;
 }
 
 #about h4 {
@@ -123,11 +124,18 @@ main a:hover {
   font-size: 16px;
 }
 
-#about img {
+#about a img {
+  width: 40px;
 }
 
 .text-center{
   text-align: center;
+}
+
+#top{
+  background: #F9F9F9;
+  text-align: center;
+
 }
 
 .project {
